--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <button class="theme" id="blackt"></button>
   </div>
   <div id="messages">
-    <li class="sender">sender</li>
-    <li class="receiver">receiver</li>
+    <li class="receiver">Welcome to Chat-UI!</li>
   </div>
   <span>
     <input placeholder="Enter your Message" />
