--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>Chat UI</h1>
+  <h1>C h a t &nbsp; U I</h1>
   <div id="themes">
     <button class="theme" id="redt"></button>
     <button class="theme" id="bluet"></button>
