fixed message word break

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button class="theme" id="blackt"></button>
   </div>
   <div id="messages">
-    <li class="receiver">Welcome to Chat-UI!</li>
+    <p class="receiver">Welcome to Chat-UI!</p>
   </div>
   <span>
     <input placeholder="Enter your Message" />
