--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  
   <span>
     <input placeholder="Enter your Message" />
-    <button id="send" type="submit" class="far fa-paper-plane"></button>
+    <button id="send" type="submit" class="far fa-paper-plane" onclick="send()"></button>
   </span>
 
   <div id="themes">
