added github link, mute button

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 </head>
 
 <body>
-  <h1>C h a t &nbsp; U I</h1>
+  <span id="header">
+    <a class="fab fa-github" href="https://github.com/n-ce/Chat-UI"></a>
+    <h1>C h a t &nbsp; U I</h1>
+    <button class="fas fa-volume-up"></button>
+  </span>
  
   <div id="messages">
     <p class="receiver">Welcome to Chat-UI!</p>
   </div>
  
-  <span>
+  <span id="type">
     <input placeholder="Enter your Message" />
     <button id="send" type="submit" class="far fa-paper-plane" onclick="send()"></button>
   </span>
