New dataset for conversation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  
   <span id="type">
     <input placeholder="Enter your Message" />
-    <button id="send" type="submit" class="far fa-paper-plane" onclick="send()"></button>
+    <button id="send" type="submit" class="far fa-paper-plane"></button>
   </span>
 
   <div id="themes">
