--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
 </head>
 
 <body>
+  <div id="loader">Loading.. ヅ</div>
   <span id="header">
     <a class="fab fa-github" href="https://github.com/n-ce/Chat-UI"></a>
     <h1>C h a t &nbsp; U I</h1>
     <button class="fas fa-volume-up"></button>
   </span>
- 
   <div id="messages">
     <p class="receiver">Welcome to Chat-UI!</p>
   </div>
- 
   <span id="type">
     <input placeholder="Enter your Message" />
     <button id="send" type="submit" class="far fa-paper-plane"></button>
   </span>
-
   <div id="themes">
     <button class="theme" id="redt"></button>
     <button class="theme" id="bluet"></button>
@@ -34,7 +32,6 @@
     <button class="theme" id="blackt"></button>
     <button class="theme" id="tealt"></button>
   </div>
- 
   <script src="script.js"></script>
 </body>
 
